--- a/assets/css/swish.css
+++ b/assets/css/swish.css
@@ -20,11 +20,10 @@ body{font-family:'museo300', serif;-webkit-font-smoothing:antialiased;font-size:
         transform:rotate(360deg);
     }
 }
-.logo{
-	width:210px;
+.logo img{
+	max-height: 70px;
 }
-.payments, .messages{
-	width:30%;
+.messages{
 	text-align: center;
 	background-color: #F9F9F9;
 	padding: 5px 20px 20px 20px;
@@ -41,6 +40,7 @@ body{font-family:'museo300', serif;-webkit-font-smoothing:antialiased;font-size:
 	margin-left:auto;
 	margin-right:auto;
 	text-align: center;
+	margin-bottom: 10px;
 }
 .fixed{
 	position:fixed;
